fix video title, update visibility select icon

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -98,7 +98,7 @@ p {
     border: gray 0.5px solid;
 }
 
-video {
+.pf-video>video {
     height: 70px;
 }
 
@@ -156,7 +156,23 @@ video {
 }
 
 .pf-visibility {
+    display: flex;
+    align-items: center;
     cursor: pointer;
+    width: 150px;
+}
+
+#full-bg {
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
+    cursor: pointer;
+    z-index: 1;
 }
 
 .pf-visibility-bg {
@@ -166,7 +182,12 @@ video {
     transform: translate(-50%, -70%);
     background-color: #181818;
     display: none;
+    
   }
+
+#visibility-bg {
+    z-index: 2;
+}
 .pf-visibility-window {
     width: 200px;
     border: #fff solid 1px;
@@ -203,4 +224,10 @@ video {
 
 input[type='radio'] {
     transform: scale(1.5);
+}
+
+.downArrow {
+    display: none;
+    height: 10px;
+    margin: 0 10px;
 }
